dnl Process this file with autoconf to produce a configure script.
	AC_INIT(src/main.c)
	AM_CONFIG_HEADER(config.h)
	AM_INIT_AUTOMAKE(sdlzombies, 1.0.0)

dnl Checks for programs.
	AC_PROG_MAKE_SET
	AC_PROG_CC
	AC_PROG_RANLIB
	AC_PROG_INSTALL

dnl Detect host info
AC_CANONICAL_HOST
AC_CANONICAL_TARGET


dnl check sound
sound_flag="-DSOUND"
AC_ARG_ENABLE( sound,
[  --disable-sound         Disables sound], sound_flag="-DNOSOUND")
AC_SUBST(sound_flag)

dnl installation path
sdir=$datadir/games/sdlzombies
inst_flag="-DSRC_DIR=\\\"$sdir/\\\""

AC_ARG_ENABLE( install,
[  --disable-install       No installation. Played from the source directory.],
sdir=../data inst_flag="-DSRC_DIR=\\\"../\\\"")

AC_SUBST(inst_flag)
AC_SUBST(sdir)


dnl check SDL version
	AM_PATH_SDL(1.0.0,, AC_MSG_ERROR(lib SDL is needed))
	CFLAGS="$CFLAGS $SDL_CFLAGS -Wall "
	LIBS="$LIBS $SDL_LIBS"

dnl Checks for libraries.
dnl Replace `main' with a function in -lSDL_image:
	AC_CHECK_LIB(SDL_image, main,
		LIBS="$LIBS -lSDL_image",
		AC_MSG_ERROR([*** SDL_image library not found!])
	)


dnl Replace `main' with a function in -lSDL_mixer:
use_mixer=yes
AC_CHECK_LIB(SDL_mixer, main,
	LIBS="$LIBS -lSDL_mixer",
	use_mixer=no
)
if test x$use_mixer = xyes; then
	CFLAGS="$CFLAGS -DSOUND"
else
	CFLAGS="$CFLAGS -DNOSOUND"
fi


dnl Target
case "$target" in
	*-*-linux*)
		CFLAGS="$CFLAGS -DLINUX"
	;;
	*-*-cygwin* | *-*-mingw32*)
		CFLAGS="$CFLAGS -DWIN32"
	;;
esac    

dnl Checks for header files.
	AC_HEADER_STDC
	
dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Create Output

	AC_OUTPUT(Makefile src/Makefile data/Makefile \
				data/penguin/Makefile data/status/Makefile \
				data/background/Makefile data/sounds/Makefile \
				data/zombies/Makefile data/environ/Makefile \
				data/menu/Makefile data/menu_opt/Makefile )
