DEFS = @sound_flag@ @inst_flag@ @DEFS@


bin_PROGRAMS = sdlzombies 

sdlzombies_SOURCES = main.c \
					sdl_util.c sdl_util.h \
					global.c global.h option.h option.c \
					draw_text.c draw_text.h \
					game.c \
					level.c level.h \
					penguin.c penguin.h \
					zombies.c zombies.h \
					hole.c hole.h \
					menu.c menu.h \
					f_option.c f_option.h

EXTRA_DIST = $(sdlzombies_SOURCES)
